--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <title>{{title}}</title>
   </head>
   <body>
-    <h1>This is the home page</h1>
-    <script src="/javascript/app.js"></script>
+    <nav>
+      <h1>Home</h1>
+      <ul>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+
+    {{{body}}}
   </body>
 </html>
